k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gnx-backend
  namespace: gnx-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gnx-backend
  template:
    metadata:
      labels:
        app: gnx-backend
    spec:
      containers:
        - name: gnx-backend
          image: fairozcp/gnx-backend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: gnx-backend
  namespace: gnx-app
spec:
  selector:
    app: gnx-backend
  ports:
    - port: 3000
      targetPort: 3000
