k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gnx-frontend
  namespace: gnx-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gnx-frontend
  template:
    metadata:
      labels:
        app: gnx-frontend
    spec:
      containers:
        - name: gnx-frontend
          image: fairozcp/gnx-frontend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: gnx-frontend
  namespace: gnx-app
spec:
  selector:
    app: gnx-frontend
  ports:
    - port: 80
      targetPort: 80
